2011-03-01  Seb Viret  <viret@in2p3.fr>
 
       	* Added one new filter HLTTrackerHaloFilter dedicated to beam halo tracks 
	  selection. Corresponding python configuration file was added.

	* A small test script was added in ~/test/ directory, test_HaloFilters_cfg.py.  
	  It runs directly on Raw data.
	
	* This modification was done based on tag V01-19-00

	
2011-01-21  Seb Viret  <viret@in2p3.fr>
 
       	* Replace Asymetry by Asymmetry everywhere....


2011-01-18  Seb Viret  <viret@in2p3.fr>
 
       	* Added two new filters dedicated to BeamGas events selection:
      	  HLTHFAsymetryFilter and HLTPixelAsymetryFilter. Corresponding python
       	  configuration files were also added.

	* A small test script was added in ~/test/ directory, test_AsymFilters_cfg.py.  
	  It runs directly on Raw data.

	* ChangeLog file creation: please try to report any package modification here. This 
	  will help others developers to follow what's going on around here.

	* This modification was done based on tag V01-18-00
	 